# djangocms-mcp

./: LICENSE  PUBLISHING.md  README.md  TESTING.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  test.yml
djangocms-mcp/: __init__.py  apps.py  cms_plugins.py  models.py
djangocms-mcp/templates/djangocms-mcp/: mcp_server.html
djangocms_mcp/: apps.py  cms_plugins.py  mcp.py  models.py
djangocms_mcp/templates/djangocms_mcp/: mcp_server.html
tests/: settings.py  test_basic.py  test_cms_plugins.py  test_config.py  test_integration.py  test_mcp.py  test_models.py  urls.py
tests/templates/: template_1.html
